[package]
name = "ju-tcs-rust-23-16"
version = "0.1.0"
edition = "2021"
description = "reading first or last lines from a file."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {vaersion = "4.4.11", features = ["cargo"]}
